--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	<head>
-	<title>Sample Webpage One</title>
-	</head>
+	<title>Sample Blog Webpage One</title>
 
+	</head>
+	<body>
+		
+
+
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+	</body>
 
 
 </html>
