--- a/index.html
+++ b/index.html
@@ -32,9 +32,37 @@
 					</div>	
 				</div>
 				<!--End Side Navigation-->
+
+				<!--Begin Posts section-->
+				<div class="col-sm-9">
+					<h4><small>Recent Posts</small></h4>
+					<hr>
+					<h2>Post Title 1</h2>
+					<h5><span class="glyphicon glyphicon-time"></span>Post by Janelle Doe, June 24, 2018.</h5>
+					<h5><span class="label label-danger">Beer</span><span class="label label-primary">Ipsum</span></h5>
+					<br>
+					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas euismod dignissim arcu ac suscipit. Aenean tincidunt egestas dolor ac pharetra. Phasellus et tempor metus. Aliquam id ultricies magna. Pellentesque id lectus consectetur, blandit arcu a, porta erat. Morbi commodo ante urna, vitae euismod eros euismod ac. Praesent vel dolor lacus. Ut dictum lacinia elit et volutpat. Morbi et consequat lacus. Praesent semper erat quis convallis elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus rhoncus, augue eget varius vulputate, elit nisi iaculis ligula, eu placerat sapien tellus at nibh. Proin dapibus auctor dui, eu fermentum mauris egestas vitae. Quisque dapibus, dolor eu rhoncus convallis, nunc metus luctus ex, sed scelerisque enim nisl eget enim. Maecenas luctus nulla rhoncus ante congue, ut aliquet leo cursus.</p>
+					<br><br>
+
+					<h4><small>Recent Posts</small></h4>
+					<hr>
+					<h2>Post Title 2</h2>
+					<h5><span class="glyphicon glyphicon-time"></span>Post by Jayden Doe, June 24, 2018.</h5>
+					<h5><span class="label label-success">Lorem</span></h5><br>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas euismod dignissim arcu ac suscipit. Aenean tincidunt egestas dolor ac pharetra. Phasellus et tempor metus. Aliquam id ultricies magna. Pellentesque id lectus consectetur, blandit arcu a, porta erat. Morbi commodo ante urna, vitae euismod eros euismod ac. Praesent vel dolor lacus. Ut dictum lacinia elit et volutpat. Morbi et consequat lacus. Praesent semper erat quis convallis elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus rhoncus, augue eget varius vulputate, elit nisi iaculis ligula, eu placerat sapien tellus at nibh. Proin dapibus auctor dui, eu fermentum mauris egestas vitae. Quisque dapibus, dolor eu rhoncus convallis, nunc metus luctus ex, sed scelerisque enim nisl eget enim. Maecenas luctus nulla rhoncus ante congue, ut aliquet leo cursus.</p>
+					<hr>
+
+					<h4>Leave a Comment:</h4>
+					<form role="form">
+						<div class="form-group">
+							<textarea class="form-control" rows="3" required></textarea>
+						</div>
+						<button type="submit" class="btn btn-success">Submit</button>
+					</form>
+					<br><br>
+				</div>
 			</div>
 		</div>
-=======
 		
 
 
